--- a/from/form.html
+++ b/from/form.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="from-style.css">
+    <title>入力フォーム</title>
+    <link rel="stylesheet" href="form-style.css">
 </head>
 <body>
-    <p><h1>会員登録</h1></p>
+    <h1>会員登録</h1>
     <p>以下の情報を入力し、確認ボタンを押してください。</p><br>
     <form action="#" method="post">
         <fieldset><legend>お客様情報</legend>
@@ -35,7 +35,7 @@
         <label><input type="checkbox" name="magazine" value="4">　医療</label><br>
        </fieldset>
        <fieldset><legend>利用規約</legend>
-        <a href="terms.html" target="_blank">利用規約を確認する</a><br>
+        <a href="terms.html" target="_blank"><font size="0.7">利用規約を確認する</font></a><br>
         <label><input type="checkbox" name="terms" value="agree">　規約に同意する</label>
        </fieldset>
        <button type="reset">クリアボタン</button>
