--- a/from/form.html
+++ b/from/form.html
@@ -35,7 +35,7 @@
         <label><input type="checkbox" name="magazine" value="4">　医療</label><br>
        </fieldset>
        <fieldset><legend>利用規約</legend>
-        <a href="terms.html" target="_blank"><font size="0.7">利用規約を確認する</font></a><br>
+        <a href="terms.html" target="_blank">利用規約を確認する</a><br>
         <label><input type="checkbox" name="terms" value="agree">　規約に同意する</label>
        </fieldset>
        <button type="reset">クリアボタン</button>
