--- a/from/terms.html
+++ b/from/terms.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>利用規約</title>
+    <link rel="stylesheet" href="form-style.css">
 </head>
 <body>
     <p>ここに規約が表示されます。</p><br>
