--- a/from/register.html
+++ b/from/register.html
@@ -1,50 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>登録フォーム</title>
+    <link rel="stylesheet" href="register-style.css">
 </head>
+
 <body>
     <p>必要事項を入力の上、送信ボタンを押してください。</p>
     <form action="#" method="post">
         <table>
-            <tr>
-                <fieldset>ID（メールアドレス）<input type="email" name="email" placeholder="例 : xxx@morijyobi.ac.jp" required></fieldset><br>
-        <fieldset>パスワード（半角英数字8文字以上）<input type="password" name="password" required><label><input type="checkbox" name="ok">パスワードを表示する</label></fieldset><br>
-        <fieldset>氏名　姓:<input type="text" name="user_name" placeholder="例:盛岡" required>　名:<input type="text" name="user_name2" placeholder="例:太郎" required></fieldset><br>
-        <fieldset>住所
-                  〒<input type="text" name="banngou" placeholder="例:000-0000"><br>
-                  <input type="text" name="jyuusyo" placeholder="住所"><br>
-                  <input type="text" name="bannti" placeholder="番地"><br>
-                  <input type="text" name="tatemonomei" placeholder="建物名"><br>
-        </fieldset>
-            </tr>
+            <!-- <tbody> -->
+                <tr>
+                    <td class="class1">ID<span class="class">必須</span><span class="class3">（メールアドレス）</span></td>
+                    <td class="class2"><input type="email" name="email" placeholder="例 : xxx@morijyobi.ac.jp" size="30" required></td><br>
+                </tr>
+                <tr>
+                    <td class="class1">パスワード<span class="class">必須</span></span><span class="class3">（半角英数字8文字以上）</span></td>
+                    <td class="class2"><input type="password" name="password" required><label><input type="checkbox"
+                                name="ok">パスワードを表示する</label></td><br>
+                </tr>
+                <tr>
+                    <td class="class1">氏名<span class="class">必須</span></td>　
+                    <td class="class2">姓:<input type="text" name="user_name" placeholder="例:盛岡" required>　名:<input type="text"
+                            name="user_name2" placeholder="例:太郎" required></td><br>
+                </tr>
+                <tr>
+                    <td class="class1">
+                        住所
+                    </td>
+                    <td class="class2">
+                        〒<input type="text" name="banngou" placeholder="例:000-0000"><br>
+                        <input type="text" name="jyuusyo" placeholder="住所"><br>
+                        <input type="text" name="bannti" placeholder="番地"><br>
+                        <input type="text" name="tatemonomei" placeholder="建物名" size="30"><br>
+                    </td>
+
+                </tr>
+                <tr>
+                    <td class="class1">携帯番号<span class="class">必須</span></span><span class="class3">（ハイフンなし）</span></td>
+                    <td class="class2">
+                        <input type="tel" name="tel" required>
+                    </td><br>
+                </tr>
+                <tr>
+                    <td class="class1">学科・学年<span class="class">必須</span>　</td>
+                    <td class="class2">学科:<select name="blood_tye" required>
+                            <option value="">学科を選択してください</option>
+                            <option value="sisutemu">システム系学科</option>
+                            <option value="bijinesu">ビジネス系学科</option>
+                            <option value="dezain">デザイン系学科</option>
+                        </select>
+                        　学年:<select name="blood_tye2" required>
+                            <option value="">学年を選択してください</option>
+                            <option value="1">1年</option>
+                            <option value="2">2年</option>
+                            <option value="3">3年</option>
+                            <option value="4">4年</option>
+                        </select>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="class1">お得な情報・クーポン<span class="class">必須</span></td>
+                    <td class="class2">
+                        <label><input type="radio" name="radio" required>受け取る</label> <label><input type="radio" name="radio"
+                                required>受け取らない</label>
+                    </td>
+
+                </tr>
+                <tr>
+                    <td class="class1">ご意見・ご要望</span><span class="class3">（200文字以内でご記入ください）</span></td>
+                    <td class="class2"><textarea name="area" cols="50" rows="10" maxlength="200"></textarea></td><br>
+                </tr>
+            <!-- </tbody> -->
+            
         </table>
-        <fieldset>携帯番号（ハイフンなし）
-            <input type="tel" name="tel" required>
-        </fieldset><br>
-        <fieldset>学科・学年　
-            学科:<select name="blood_tye" required>
-            <option value="">学科を選択してください</option>
-            <option value="sisutemu">システム系学科</option>
-            <option value="bijinesu">ビジネス系学科</option>
-            <option value="dezain">デザイン系学科</option>
-        </select>
-             　学年:<select name="blood_tye2" required>
-                <option value="">学年を選択してください</option>
-                <option value="1">1年</option>
-                <option value="2">2年</option>
-                <option value="3">3年</option>
-                <option value="4">4年</option>
-             </select>
-    </fieldset>
-    <fieldset>お得な情報・クーポン
-        <label><input type="radio" name="" required>受け取る</label> <label><input type="radio" name="" required>受け取らない</label>
-    </fieldset>
-    <fieldset>ご意見・ご要望（200文字以内でご記入ください）
-        <input type="text" name="messege" size="200"><br>
-    </fieldset>
+        <button type="reset">入力内容をクリアする</button>
+            <button type="submit">送信</button>
     </form>
 </body>
+
 </html>
