--- a/from/register.html
+++ b/from/register.html
@@ -19,7 +19,7 @@
                 </tr>
                 <tr>
                     <td class="class1">パスワード<span class="class">必須</span></span><span class="class3">（半角英数字8文字以上）</span></td>
-                    <td class="class2"><input type="password" name="password" required><label><input type="checkbox"
+                    <td class="class2"><input type="password" name="password" size="30" minlength="8" required ><label><input type="checkbox"
                                 name="ok">パスワードを表示する</label></td><br>
                 </tr>
                 <tr>
@@ -32,9 +32,9 @@
                         住所
                     </td>
                     <td class="class2">
-                        〒<input type="text" name="banngou" placeholder="例:000-0000"><br>
-                        <input type="text" name="jyuusyo" placeholder="住所"><br>
-                        <input type="text" name="bannti" placeholder="番地"><br>
+                        〒<input type="text" name="banngou" value="020-0021" size="8"><br>
+                        <input type="text" name="jyuusyo" value="岩手県盛岡市中央通3丁目"><br>
+                        <input type="text" name="bannti" placeholder="2番地17号"><br>
                         <input type="text" name="tatemonomei" placeholder="建物名" size="30"><br>
                     </td>
 
@@ -65,8 +65,8 @@
                 <tr>
                     <td class="class1">お得な情報・クーポン<span class="class">必須</span></td>
                     <td class="class2">
-                        <label><input type="radio" name="radio" required>受け取る</label> <label><input type="radio" name="radio"
-                                required>受け取らない</label>
+                        <label><input type="radio" name="radio" value="yes" required>受け取る</label> <label><input type="radio" name="radio"
+                                value="no">受け取らない</label>
                     </td>
 
                 </tr>
